Fixed the border radius on the whitelabel device on mobile on the Eastland page

--- a/css/themes.css
+++ b/css/themes.css
@@ -1087,7 +1087,7 @@
 		}
 	}
 	
-	.eastland #cards div {
+	.eastland #cards div:not(#containerScreenshot) {
 		background: var(--accentTertiary);
 		border-radius: var(--spacer);
 		padding: var(--spacer);
